--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-native-material-ui": "^1.30.1",
+    "react-native-modal": "^6.5.0",
     "react-native-vector-icons": "^5.0.0"
   }
 }
