--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "expokit": "^1.5.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-modal": "^6.5.0",
     "react-native-vector-icons": "^5.0.0"
